# myagn

./: .gitignore  pyproject.toml
src/myagn/: distributions.py  flare.py
src/myagn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/myagn/flares/: flares.py  models.py
src/myagn/qlfhopkins/: qlf_calculator  qlfhopkins.py
tests/: test_burkeJ1249_milliquas.py  test_burkeJ1249_phi.py  test_compare_distributions.py  test_palmese21.py  test_qlfhopkins.py
